--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,6 +19,12 @@
         android:layout_height="wrap_content"
         android:text="@string/button_oauth_github" />
 
+    <Button
+        android:id="@+id/launch_nosession"
+        android:text="Lanch dev page(No Session)"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@android:id/text1"
         android:layout_width="match_parent"
