プリフェッチ用のボタンを追加
リンクをクリックしたときにプリフェッチするようにしていたが
ボタン起動に変更した

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,7 +21,13 @@
 
     <Button
         android:id="@+id/launch_nosession"
-        android:text="Lanch dev page(No Session)"
+        android:text="Lanch dev page (No Warm up)"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/launch_session"
+        android:text="Lanch dev page (Warm up)"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
